@@ -1,3 +1,13 @@
+2008-07-07  Jeremy Cribb <jcribb@email.unc.edu>
+	* .cvsignore: added. this folder now ignores .asv and .mat files
+	* plot_cap_creep.m: added.  generates standard cone-and-plate (CAP) creep figure.
+	* plot_cap_flow.m: added. generates standard CAP flow figure.
+	* plot_cap_fsweep.m: added. generates standard CAP frequency sweep figure.
+	* plot_cap_nsweep.m: added. generates standard CAP strain sweep figure.
+	* plot_cap_ssweep.m: added. generates standard CAP stress sweep figure.
+	* taplot.m: added.  uses ta2mat and plotting functions to generate our standard set of canonical rheology plots.
+	* ta2mat.m: fixed bug where matrix containing final tabulated data gets overwritten with zeros.
+	
 2008-05-16  Jeremy Cribb <jcribb@email.unc.edu>
 	* ta2mat.m: parses text file generated by TA Instruments Area Rheometer and puts into a matlab structure.
 	* ta2mat.notes.m: design notes about ta2mat.
